log
Thu Mar 17 14:22:22 HSP 2022: 
 tests:  0|6
total_score: 0/70
0f13886
Thu Mar 17 14:31:16 HSP 2022: 
 list.c | 36 +++++++++++++++++++++++++++++++-----
 1 file changed, 31 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:41:19: error: comparison between pointer and integer [-Werror]
   if (!list->head == NULL) return NULL;
                   ^~
list.c: In function 'pushFront':
list.c:75:18: error: comparison between pointer and integer [-Werror]
   if(!list->head == NULL) list->head->prev = nuevo;
                  ^~
cc1.exe: all warnings being treated as errors
Compilation failed
49a7513
Thu Mar 17 14:33:32 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:41:22: error: comparison between pointer and integer [-Werror]
   if (!list->current == NULL) return NULL;
                      ^~
list.c: In function 'pushFront':
list.c:75:18: error: comparison between pointer and integer [-Werror]
   if(!list->head == NULL) list->head->prev = nuevo;
                  ^~
cc1.exe: all warnings being treated as errors
Compilation failed
7d51fd7
Thu Mar 17 14:34:28 HSP 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
8bf1c7a
Thu Mar 17 14:42:42 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
40cfba9
Thu Mar 17 14:45:34 HSP 2022: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
37eafeb
Thu Mar 17 14:50:49 HSP 2022: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
b0a3377
Thu Mar 17 14:52:07 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
d2848a8
Thu Mar 17 14:54:37 HSP 2022: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|0
53999ca
Sat Mar 19 21:35:19 HSP 2022: 
 list.c | 16 ++++++++++------
 1 file changed, 10 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:77:18: error: comparison between pointer and integer [-Werror]
   if(!list->tail == NULL){
                  ^~
cc1.exe: all warnings being treated as errors
Compilation failed
1ce9acb
Sat Mar 19 21:37:06 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4507750
Sat Mar 19 21:37:53 HSP 2022: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
22ae941
Sat Mar 19 21:39:54 HSP 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
4231227
Sat Mar 19 21:41:00 HSP 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
b9c52c9
Sat Mar 19 21:41:43 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 20/70
2b64409
Sat Mar 19 21:44:01 HSP 2022: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  2|4
total_score: 20/70
f1f264d
Sat Mar 19 21:56:42 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 25/70
2d259c9
Sat Mar 19 21:58:51 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|4
total_score: 25/70
3dabc33
Sat Mar 19 22:01:25 HSP 2022: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|0
4f0092e
Sat Mar 19 22:06:53 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2bf3853
Sat Mar 19 22:08:48 HSP 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
406dff9
Sat Mar 19 22:21:04 HSP 2022: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  10|2
total_score: 45/70
ef7bc9c
Sat Mar 19 22:55:44 HSP 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|2
total_score: 45/70
b7c1d8b
Sat Mar 19 22:56:20 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
aaf545c
Sat Mar 19 23:06:44 HSP 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:95:17: error: 'return' with a value, in function returning void [-Werror]
   } else return NULL;
                 ^~~~
list.c:90:6: note: declared here
 void pushCurrent(List * list, void * data) {
      ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
92a2726
Sat Mar 19 23:09:45 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
fc6aa41
Sat Mar 19 23:12:49 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
0cde95e
Sat Mar 19 23:13:09 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
5aa71b6
Sat Mar 19 23:14:14 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
cc10126
Sat Mar 19 23:21:35 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
d012536
Sat Mar 19 23:25:34 HSP 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
c9fcc4b
Sat Mar 19 23:27:11 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
a7daa90
Sat Mar 19 23:55:17 HSP 2022: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c:100:5: error: expected identifier or '(' before 'else'
   } else list->current->next->prev = nodoN;
     ^~~~
list.c:102:7: error: expected '=', ',', ';', 'asm' or '__attribute__' before '->' token
   list->current->next = nodoN;
       ^~
list.c:103:8: error: expected '=', ',', ';', 'asm' or '__attribute__' before '->' token
   nodoN->next = list->current->next->next;
        ^~
list.c:104:7: error: expected '=', ',', ';', 'asm' or '__attribute__' before '->' token
   list->current->next->next->prev = nodoN;
       ^~
list.c:105:8: error: expected '=', ',', ';', 'asm' or '__attribute__' before '->' token
   nodoN->prev = list->current;
        ^~
list.c:106:1: error: expected identifier or '(' before '}' token
 }
 ^
Compilation failed
ffcc073
Sat Mar 19 23:57:13 HSP 2022: 
 list.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  10|2
total_score: 45/70
bd57b47
Sun Mar 20 00:03:54 HSP 2022: 
 list.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  10|2
total_score: 45/70
6dc74fe
Sun Mar 20 00:08:51 HSP 2022: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
9276b97
Sun Mar 20 00:28:51 HSP 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
751920e
Sun Mar 20 00:30:35 HSP 2022: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
fa1096e
Sun Mar 20 11:04:52 HSP 2022: 
 list.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  11|1
total_score: 55/70
a2c8398
Sun Mar 20 11:07:29 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
599d00b
Sun Mar 20 11:07:49 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
65f991e
Sun Mar 20 11:08:23 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
7de4914
